# triangular_matrix_solver

./: .gitignore  CMakeLists.txt  MatrixSolver.cpp  MatrixSolver.h  README.md  lsolve.cpp  main.cpp  run  run.sh
matrix-operations/: MatrixSolver.cpp  MatrixSolver.h
matrix-reading/: CSC.cpp  CSC.h  Utils.cpp  Utils.h  VectorRead.cpp  VectorRead.h
